# ocr_rag_exp

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  app.py  pyproject.toml
.claude/: settings.local.json
GenAI_Assignment_Health_v1/: GenAI Assignment.docx
config/: default.yaml
results/: experiment_results.json
scripts/: answer.py  evaluate.py  full_evaluation.py  setup.py
src/: config.py  factory.py  models.py  pipeline.py
src/chunking/: base.py  page_chunker.py  parent_child_chunker.py  semantic_chunker.py
src/embedding/: base.py  sentence_transformer.py
src/evaluation/: evaluator.py  groundedness.py  langfuse_tracker.py  ragas_evaluator.py
src/generation/: base.py  openai_generator.py  prompt_templates.py
src/ocr/: base.py  easyocr_extractor.py  paddleocr_extractor.py  preprocessing.py  tesseract_ocr.py  vlm_extractor.py
src/retrieval/: base.py  dense_retriever.py  parent_child_retriever.py
src/vectorstore/: base.py  chroma_store.py
tests/: conftest.py  test_chunking.py  test_embedding.py  test_generation.py  test_ocr.py  test_pipeline_integration.py  test_retrieval.py
